--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-body, ul, li, h1, h2 , a {
+body, ul, li, h1, h2, a {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 header {
     background-color: #F4F4F4;
     padding: 20px;
@@ -13,104 +14,88 @@ header {
     top: 0;
     left: 0;
 }
+
 header h1 {
     color: rgb(33, 115, 184);
     padding: 6px 12px;
     display: inline-block;
     border-radius: 36px;
 }
-.banner {
+
+.banner, .results-banner, .race_results {
     position: relative;
-    top: 5px;
 }
-.banner img {
+
+/* Responsive image styles for .banner and .race_results */
+.banner img, .results-banner img, .race_results img {
     max-width: 100%;
     height: auto;
+    display: block; /* This will ensure the image scales properly */
 }
-.results-banner img {
-    position: relative;
-    width: 100%;
-    height: auto;
-    top: 5px;
-    background-image: url(./img/2023\ Pierre\ Alpine\ Car.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
- }
- .results-banner .stats {
+
+.results-banner .stats {
     background-color: rgb(33, 115, 184);
     color: white;
     padding: 30px;
     position: absolute;
     left: 0px;
-    top: 30%
- }
+    top: 30%;
+}
+
 .banner .welcome {
     background-color: rgb(33, 115, 184);
     color: white;
     padding: 30px;
     position: absolute;
     left: 0px;
-    top: 30%
+    top: 30%;
 }
+
 .race_results {
     text-align: center;
 }
-.drivers {
-    text-align: center;
-    color: #4B4B4B;
-}
+
 .drivers img {
-    width: 750px;
+    width: 750px; /* You might want to make this responsive as well */
 }
-.banner h2 {
+
+.banner h2, .race_results h2 {
     font-size: 74px;
 }
+
 .projects a {
     text-decoration: none;
 }
+
 .projects h1 {
     text-align: center;
 }
-.skill-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
-.skill-column {
-    flex: 1;
-    padding: 0 20px; 
-    box-sizing: border-box; 
-}
-.skill-column h1 {
-    text-align: center;
-}
-.center {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-}
+
 nav {
-    background-color:rgb(33, 115, 184);
+    background-color: rgb(33, 115, 184);
     padding: 20px;
     position: sticky;
     top: 88px;
 }
+
 nav ul {
     white-space: nowrap;
     max-width: 1200px;
     margin: 0 auto;
 }
+
 nav li {
     width: 25%;
     display: inline-block;
     font-size: 24px;
     text-align: center;
 }
+
 nav li a {
     text-decoration: none;
     color: white;
 }
+
 main {
     max-width: 100%;
     width: 1200px;
@@ -118,22 +103,27 @@ main {
     padding: 0 40px;
     box-sizing: border-box;
 }
+
 article h2 {
     font-size: 2em;
     text-align: center;
 }
+
 article p {
     line-height: 2em;
 }
+
 section.join {
     background-color: #F4F4F4;
     text-align: center;
     padding: 60px 20px;
     color: #4B4B4B;
 }
+
 .join h2 {
     font-size: 36px;
 }
+
 form input {
     margin: 20px 0;
     padding: 10px 20px;
@@ -141,24 +131,30 @@ form input {
     border-radius: 28px;
     border: 4px solid white;
 }
+
 nav li a:hover {
     text-decoration: underline;
 }
+
 form input:focus {
     border: 4px dashed #4B4B4B;
     outline: none;
 }
+
 form input:valid {
     border: 4px solid #71D300;
 }
-.copyright{
+
+.copyright {
     text-align: center;
 }
+
 p::selection {
     background-color: rgb(33, 115, 184);
     color: white;
 }
-@media screen and (max-width: 1400px){
+
+@media screen and (max-width: 1400px) {
     .banner .welcome h2 {
         font-size: 60px;
     }
@@ -166,12 +162,14 @@ p::selection {
         font-size: 18px;
     }
 }
-@media screen and (max-width: 960px){
+
+@media screen and (max-width: 960px) {
     .banner .welcome h2 {
         font-size: 40px;
     }
 }
-@media screen and (max-width: 700px){
+
+@media screen and (max-width: 700px) {
     .banner .welcome {
         position: relative;
         text-align: center;
@@ -183,10 +181,8 @@ p::selection {
     .banner .welcome h2 {
         font-size: 25px;
     }
-    .banner .welcome span {
-        font-size: 1em;
-    }
 }
+
 @media screen and (max-width: 560px) {
     nav li {
         font-size: 20px;
